generator/internal_rule.v4
# Generated by iptables-save v1.8.4 on Sun Feb 21 16:27:14 2021
*security
:INPUT ACCEPT [7043:2724588]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [9027:1353177]
COMMIT
# Completed on Sun Feb 21 16:27:14 2021
# Generated by iptables-save v1.8.4 on Sun Feb 21 16:27:14 2021
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [291:23211]
:POSTROUTING ACCEPT [291:23211]
COMMIT
# Completed on Sun Feb 21 16:27:14 2021
# Generated by iptables-save v1.8.4 on Sun Feb 21 16:27:14 2021
*raw
:PREROUTING ACCEPT [10716:2976791]
:OUTPUT ACCEPT [9027:1353177]
COMMIT
# Completed on Sun Feb 21 16:27:14 2021
# Generated by iptables-save v1.8.4 on Sun Feb 21 16:27:14 2021
*mangle
:PREROUTING ACCEPT [10716:2976791]
:INPUT ACCEPT [10716:2976791]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [9027:1353177]
:POSTROUTING ACCEPT [9034:1353688]
COMMIT
# Completed on Sun Feb 21 16:27:14 2021
# Generated by iptables-save v1.8.4 on Sun Feb 21 16:27:14 2021
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:ufw-after-forward - [0:0]
:ufw-after-input - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-before-input - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-output - [0:0]
:ufw-logging-allow - [0:0]
:ufw-logging-deny - [0:0]
:ufw-not-local - [0:0]
:ufw-reject-forward - [0:0]
:ufw-reject-input - [0:0]
:ufw-reject-output - [0:0]
:ufw-skip-to-policy-forward - [0:0]
:ufw-skip-to-policy-input - [0:0]
:ufw-skip-to-policy-output - [0:0]
:ufw-track-forward - [0:0]
:ufw-track-input - [0:0]
:ufw-track-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-user-input - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-output - [0:0]
-A INPUT -s 125.168.8.0/23 -d 125.168.26.0/24 -p udp -j ACCEPT
-A INPUT -s 125.168.7.0/24 -d 125.168.26.0/24 -p udp -j ACCEPT
-A INPUT -s 125.168.4.0/22 -d 125.168.26.0/24 -p udp -j ACCEPT
-A INPUT -s 125.158.0.0/22 -d 125.168.26.0/24 -p udp -j ACCEPT
-A INPUT -s 125.168.8.0/23 -d 125.168.24.0/24 -p udp -j ACCEPT
-A INPUT -s 125.168.7.0/24 -d 125.168.24.0/24 -p udp -j ACCEPT
-A INPUT -s 125.168.4.0/22 -d 125.168.24.0/24 -p udp -j ACCEPT
-A INPUT -s 125.158.0.0/22 -d 125.168.24.0/24 -p udp -j ACCEPT
-A INPUT -s 208.80.152.0/22 -d 125.168.25.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 40.64.0.0/10 -d 125.168.25.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 151.101.0.0/16 -d 125.168.25.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 172.217.0.0/16 -d 125.168.25.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 13.64.0.0/10 -d 125.168.25.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 125.168.10.0/24 -d 125.168.25.0/24 -p udp -j ACCEPT
-A INPUT -s 125.168.8.0/23 -d 125.168.25.0/24 -p udp -j ACCEPT
-A INPUT -s 125.168.7.0/24 -d 125.168.25.0/24 -p udp -j ACCEPT
-A INPUT -s 125.168.4.0/22 -d 125.168.25.0/24 -p udp -j ACCEPT
-A INPUT -s 125.158.0.0/22 -d 125.168.25.0/24 -p udp -j ACCEPT
-A INPUT -s 208.80.152.0/22 -d 125.168.22.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 40.64.0.0/10 -d 125.168.22.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 151.101.0.0/16 -d 125.168.22.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 172.217.0.0/16 -d 125.168.22.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 13.64.0.0/10 -d 125.168.22.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 125.168.10.0/24 -d 125.168.22.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.8.0/23 -d 125.168.22.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.7.0/24 -d 125.168.22.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.4.0/22 -d 125.168.22.0/23 -p udp -j ACCEPT
-A INPUT -s 125.158.0.0/22 -d 125.168.22.0/23 -p udp -j ACCEPT
-A INPUT -s 208.80.152.0/22 -d 125.168.20.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 40.64.0.0/10 -d 125.168.20.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 151.101.0.0/16 -d 125.168.20.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 172.217.0.0/16 -d 125.168.20.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 13.64.0.0/10 -d 125.168.20.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 125.168.10.0/24 -d 125.168.20.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.8.0/23 -d 125.168.20.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.7.0/24 -d 125.168.20.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.4.0/22 -d 125.168.20.0/23 -p udp -j ACCEPT
-A INPUT -s 125.158.0.0/22 -d 125.168.20.0/23 -p udp -j ACCEPT
-A INPUT -s 208.80.152.0/22 -d 125.168.18.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 40.64.0.0/10 -d 125.168.18.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 151.101.0.0/16 -d 125.168.18.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 172.217.0.0/16 -d 125.168.18.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 13.64.0.0/10 -d 125.168.18.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 125.168.10.0/24 -d 125.168.18.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.8.0/23 -d 125.168.18.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.7.0/24 -d 125.168.18.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.4.0/22 -d 125.168.18.0/23 -p udp -j ACCEPT
-A INPUT -s 125.158.0.0/22 -d 125.168.18.0/23 -p udp -j ACCEPT
-A INPUT -s 208.80.152.0/22 -d 125.168.16.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 40.64.0.0/10 -d 125.168.16.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 151.101.0.0/16 -d 125.168.16.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 172.217.0.0/16 -d 125.168.16.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 13.64.0.0/10 -d 125.168.16.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 125.168.10.0/24 -d 125.168.16.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.8.0/23 -d 125.168.16.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.7.0/24 -d 125.168.16.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.4.0/22 -d 125.168.16.0/23 -p udp -j ACCEPT
-A INPUT -s 125.158.0.0/22 -d 125.168.16.0/23 -p udp -j ACCEPT
-A INPUT -s 208.80.152.0/22 -d 125.168.14.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 40.64.0.0/10 -d 125.168.14.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 151.101.0.0/16 -d 125.168.14.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 172.217.0.0/16 -d 125.168.14.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 13.64.0.0/10 -d 125.168.14.0/23 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 125.168.10.0/24 -d 125.168.14.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.8.0/23 -d 125.168.14.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.7.0/24 -d 125.168.14.0/23 -p udp -j ACCEPT
-A INPUT -s 125.168.4.0/22 -d 125.168.14.0/23 -p udp -j ACCEPT
-A INPUT -s 125.158.0.0/22 -d 125.168.14.0/23 -p udp -j ACCEPT
-A INPUT -s 208.80.152.0/22 -d 125.168.13.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 40.64.0.0/10 -d 125.168.13.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 151.101.0.0/16 -d 125.168.13.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 172.217.0.0/16 -d 125.168.13.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 13.64.0.0/10 -d 125.168.13.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 125.168.8.0/23 -d 125.168.13.0/24 -p udp -j ACCEPT
-A INPUT -s 125.168.4.0/22 -d 125.168.13.0/24 -p udp -j ACCEPT
-A INPUT -s 125.158.0.0/22 -d 125.168.13.0/24 -p udp -j ACCEPT
-A INPUT -s 208.80.152.0/22 -d 125.168.12.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 40.64.0.0/10 -d 125.168.12.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 151.101.0.0/16 -d 125.168.12.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 172.217.0.0/16 -d 125.168.12.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 13.64.0.0/10 -d 125.168.12.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 125.168.8.0/23 -d 125.168.12.0/24 -p udp -j ACCEPT
-A INPUT -s 125.168.4.0/22 -d 125.168.12.0/24 -p udp -j ACCEPT
-A INPUT -s 125.158.0.0/22 -d 125.168.12.0/24 -p udp -j ACCEPT
-A INPUT -s 208.80.152.0/22 -d 125.168.11.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 40.64.0.0/10 -d 125.168.11.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 151.101.0.0/16 -d 125.168.11.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 172.217.0.0/16 -d 125.168.11.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 13.64.0.0/10 -d 125.168.11.0/24 -p tcp -m tcp --dport 2500 -j ACCEPT
-A INPUT -s 208.80.152.0/22 -d 125.168.11.0/24 -p udp -m udp --dport 2500 -j ACCEPT
-A INPUT -s 40.64.0.0/10 -d 125.168.11.0/24 -p udp -m udp --dport 2500 -j ACCEPT
-A INPUT -s 151.101.0.0/16 -d 125.168.11.0/24 -p udp -m udp --dport 2500 -j ACCEPT
-A INPUT -s 172.217.0.0/16 -d 125.168.11.0/24 -p udp -m udp --dport 2500 -j ACCEPT
-A INPUT -s 13.64.0.0/10 -d 125.168.11.0/24 -p udp -m udp --dport 2500 -j ACCEPT
-A INPUT -s 125.168.8.0/23 -d 125.168.11.0/24 -p udp -j ACCEPT
-A INPUT -s 125.168.4.0/22 -d 125.168.11.0/24 -p udp -j ACCEPT
-A INPUT -s 125.158.0.0/22 -d 125.168.11.0/24 -p udp -j ACCEPT
-A INPUT -s 11.0.0.0/23 -d 121.0.0.0/23 -p tcp -m tcp --dport 80 -j DROP
-A OUTPUT -s 125.168.26.0/24 -d 125.168.8.0/23 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.26.0/24 -d 125.168.7.0/24 -p udp -m udp --dport 23 -j ACCEPT
-A OUTPUT -s 125.168.26.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 995 -j ACCEPT
-A OUTPUT -s 125.168.26.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 110 -j ACCEPT
-A OUTPUT -s 125.168.26.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 25 -j ACCEPT
-A OUTPUT -s 125.168.26.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.26.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.26.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.24.0/24 -d 125.168.8.0/23 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.24.0/24 -d 125.168.7.0/24 -p udp -m udp --dport 23 -j ACCEPT
-A OUTPUT -s 125.168.24.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 995 -j ACCEPT
-A OUTPUT -s 125.168.24.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 110 -j ACCEPT
-A OUTPUT -s 125.168.24.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 25 -j ACCEPT
-A OUTPUT -s 125.168.24.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.24.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.24.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 208.80.152.0/22 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 208.80.152.0/22 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 208.80.152.0/22 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 40.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 40.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 40.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 151.101.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 151.101.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 151.101.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 172.217.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 172.217.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 172.217.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 13.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 13.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 13.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 125.168.10.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 125.168.8.0/23 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 125.168.7.0/24 -p udp -m udp --dport 23 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 995 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 110 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 25 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.25.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 125.168.10.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 125.168.8.0/23 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 125.168.7.0/24 -p udp -m udp --dport 23 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 995 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 110 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 25 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.22.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 125.168.10.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 125.168.8.0/23 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 125.168.7.0/24 -p udp -m udp --dport 23 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 995 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 110 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 25 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.20.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 125.168.10.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 125.168.8.0/23 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 125.168.7.0/24 -p udp -m udp --dport 23 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 995 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 110 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 25 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.18.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 125.168.10.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 125.168.8.0/23 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 125.168.7.0/24 -p udp -m udp --dport 23 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 995 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 110 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 25 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.16.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 208.80.152.0/22 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 40.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 151.101.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 172.217.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 13.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 125.168.10.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 125.168.8.0/23 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 125.168.7.0/24 -p udp -m udp --dport 23 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 995 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 110 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 125.168.4.0/22 -p udp -m udp --dport 25 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.14.0/23 -d 125.158.0.0/22 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 208.80.152.0/22 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 208.80.152.0/22 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 208.80.152.0/22 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 40.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 40.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 40.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 151.101.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 151.101.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 151.101.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 172.217.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 172.217.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 172.217.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 13.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 13.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 13.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 125.168.8.0/23 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 995 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 110 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 25 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.13.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 208.80.152.0/22 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 208.80.152.0/22 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 208.80.152.0/22 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 40.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 40.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 40.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 151.101.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 151.101.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 151.101.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 172.217.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 172.217.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 172.217.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 13.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 13.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 13.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 125.168.8.0/23 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 995 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 110 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 25 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.12.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 208.80.152.0/22 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 208.80.152.0/22 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 208.80.152.0/22 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 40.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 40.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 40.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 151.101.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 151.101.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 151.101.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 172.217.0.0/16 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 172.217.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 172.217.0.0/16 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 13.64.0.0/10 -p tcp -m tcp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 13.64.0.0/10 -p tcp -m tcp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 13.64.0.0/10 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 208.80.152.0/22 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 208.80.152.0/22 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 208.80.152.0/22 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 40.64.0.0/10 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 40.64.0.0/10 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 40.64.0.0/10 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 151.101.0.0/16 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 151.101.0.0/16 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 151.101.0.0/16 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 172.217.0.0/16 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 172.217.0.0/16 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 172.217.0.0/16 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 13.64.0.0/10 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 13.64.0.0/10 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 13.64.0.0/10 -p udp -m udp --dport 80 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 125.168.8.0/23 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 995 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 110 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 125.168.4.0/22 -p udp -m udp --dport 25 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 403 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 8080 -j ACCEPT
-A OUTPUT -s 125.168.11.0/24 -d 125.158.0.0/22 -p udp -m udp --dport 80 -j ACCEPT
COMMIT
# Completed on Sun Feb 21 16:27:14 2021
